<resources>
    <string name="app_name">Restaurant Admin</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="No_Internet_Connection">No Internet Connection</string>
    <string name="Blank">Blank</string>
    <string name="str_rf_login_tv_username">Username</string>
    <string name="str_rf_login_tv_password">Password</string>
    <string name="rf_rememberme">Remember Me?</string>
    <string name="str_rf_login_ed_username">Enter Email as UserName</string>
    <string name="str_rf_login_ed_password">Enter Password</string>
    <string name="str_rf_login_tv_forgetpass"><u>Forgot Your Password?</u></string>
    <string name="rf_login_dont">Don\'t have a Restaurant Finder account yet?</string>
    <string name="rf_login_rg_free">REGISTER HERE FOR FREE </string>
    <string name="str_frm">Format</string>
    <string name="str_french">French</string>
    <string name="str_iban">IBAN</string>
    <string name="str_bic">BIC</string>
    <string name="str_hint">you must be the account holder or you should have the necessary power to act on behalf of an account holder</string>
    <string name="str_hint1">To receive SMS code to sign the mandate... please confirm your mobile phone number.</string>
    <string name="str_num">Actual mobile phone</string>
    <string name="str_email">Actual Email Address</string>
    <string name="title_activity_registration_step2_">Registration_step2_Activity</string>
    <string name="Registration">Registration</string>
    <string name="str_rf_registration_tv_you">You</string>
    <string name="str_rf_registration_your_restaurant">Your Restaurant</string>
    <string name="str_rf_registration_tv_fname">Your First Name</string>
    <string name="str_rf_registration_fname">First Name</string>
    <string name="str_rf_registration_tv_lname">Your Last Name</string>
    <string name="str_rf_registration_lname">Last Name</string>
    <string name="str_rf_registration_tv_pwd">Password</string>
    <string name="str_rf_registration_tv_pwd_retype">Retype Password</string>
    <string name="str_rf_registration_email">Email</string>
    <string name="str_rf_registration_phone">Phone</string>
    <string name="str_rf_registration_tv_country">Country</string>
    <string name="str_rf_registration_tv_region">Region</string>
    <string name="str_rf_registration_tv_district">District</string>
    <string name="str_rf_registration_tv_restaurant">Restaurant Name</string>
    <string name="str_rf_registration_tv_remail">Restaurant Email</string>
    <string name="str_rf_registration_tv_rphone">Restaurant Phone</string>
    <string name="str_rf_registration_tv_add">Address</string>
    <string name="str_rf_registration_tv_zip_code">Zip Code</string>
    <string name="str_rf_registration_tv_city">City</string>
    <string name="str_rf_registration_tv_website">Website</string>
    <string name="str_rf_registration_tv_made_deliver">How many reservations are made daily?</string>
    <string name="str_rf_registration_ed_fname">Enter Your First Name</string>
    <string name="str_rf_registration_ed_lname">Enter Your Last Name</string>
    <string name="str_rf_registration_ed_pwd">Enter Password</string>
    <string name="str_rf_registration_ed_pwd_retype">Retype Password</string>
    <string name="str_rf_registration_rdo_male">Male</string>
    <string name="str_rf_registration_ed_female">Female</string>
    <string name="str_rf_registration_sp_counrty">Enter Country</string>
    <string name="str_rf_registration_ed_restaurant">Enter Restaurant Name</string>
    <string name="str_rf_registration_ed_remail">Enter Restaurant Email</string>
    <string name="str_rf_registration_ed_special_note">Special Note</string>
    <string name="str_rf_registration_ed_rphone">Enter Phone Number</string>
    <string name="str_rf_registration_ed_add">Enter Restaurant Address</string>
    <string name="str_rf_registration_ed_zip_code">Enter Zipcode</string>
    <string name="str_rf_registration_ed_city">Enter City</string>
    <string name="str_rf_registration_ed_website">Enter Restuarant Website</string>
    <string name="str_rf_registration_ed_made_deliver">How many order Deliveries?</string>
    <string name="str_rf_registration_btn_continue">Continue</string>
    <string name="str_rf_registration_btn_map">Map</string>
    <string name="str_rf_registration_step1">Step 1</string>
    <string name="str_rf_registration_step2">Step 2</string>
    <string name="str_rf_registration_step3">Step 3</string>
    <string name="str_rf_registration_step4">Step 4</string>
    <string name="str_rf_regi_step2_tv_reg">Registration</string>
    <string name="str_rf_regi_step2_tv_thank">⁫Thank You for choosing Restaurant Finder</string>
    <string name="str_rf_regi_step2_tv_que">Questions? Don\'t hasitate to contact us at   423 123 4553</string>
    <string name="str_rf_regi_step2_tv_no">+40 756 216 997</string>
    <string name="str_rf_regi_step2_tv_step">Step 2/4 You are still in charge! Set your own parameters</string>
    <string name="str_rf_regi_step4_tv_step">Step 4/4 Packages and Payment</string>
    <string name="str_rf_regi_step2_tv_youhave">You have on time commitment and only one requirement: treat the customer we send you to have them delicious \n
        									 meal. Registration will not take long time.</string>
    <string name="tv_rf_registration_title">Title</string>
    <string name="tv_rf_registration_latitude">Latitude</string>
    <string name="str_rf_registration_ed_latitude">Enter Latitude</string>
    <string name="tv_rf_registration_longitude">Longitude</string>
    <string name="str_rf_registration_ed_longitude">Enter Longitude</string>
    <string name="str_rf_regi_step2_rb_mr">Mr</string>
    <string name="str_rf_regi_step2_rb_mrs">Mrs</string>
    <string name="str_rf_regi_step2_rb_miss">Miss</string>
    <string name="str_rf_regi_step2_tv_dont">Don\'t worry moving fast</string>
    <string name="rf_regi_step2_textview6">Your booking is general</string>
    <string name="str_rf_regi_step4_dont">Congratulation... Its over</string>
    <string name="str_rf_regi_step4_free">Free</string>
    <string name="str_rf_regi_step3_tv1">Your online booking</string>
    <string name="str_rf_regi_step2_tv2">Comments</string>
    <string name="str_rf_regi_step4_online">(Online booking fees not included)</string>
    <string name="str_rf_regi_step4_tv1">This tool is ideal to manage your image and availability 
        								 online.</string>
    <string name="str_rf_regi_step4_pro">PRO +</string>
    <string name="str_rf_regi_step4_tax">89.00 excl.tax/month</string>
    <string name="str_rf_regi_step4_gold">GOLD</string>
    <string name="rf_regi_step2_textview7">Opening Date and hours</string>
    <string name="rf_regi_step2_textview8">Monday</string>
    <string name="rf_regi_step2_textview9">Tuesday</string>
    <string name="rf_regi_step2_textview10">Wednesday</string>
    <string name="rf_regi_step2_textview11">Thursday</string>
    <string name="rf_regi_step2_textview12">Friday</string>
    <string name="rf_regi_step2_textview13">Saturday</string>
    <string name="rf_regi_step2_textview14">Sunday</string>
    <string name="rf_regi_step2_textview15">Meal opening Time</string>
    <string name="rf_regi_step2_textview16">Latest Time until when booking is accepted</string>
    <string name="rf_regi_step2_textview17">Lunch</string>
    <string name="rf_regi_step2_textview18">Dinner</string>
    <string name="rf_regi_step2_textview19">How many seats dose your restaurant have?</string>
    <string name="rf_regi_step2_textview20">What is your average bill?(all mills combined)</string>
    <string name="rf_regi_step2_textview21">The following allows you to configure different 
                                             business hours for each day from your admin panel</string>
    <string name="rf_regi_step2_seatsnum">Enter Number of seats</string>
    <string name="rf_regi_step2_overbill"></string>
    <string name="rf_regi_step2_textview22">Your online booking</string>
    <string name="rf_regi_step2_textview23">Are you willing to receive "last minute" booking?</string>
    <string name="rf_regi_step2_textview24">Facility</string>
    <string name="rf_regi_step2_radiobutton1">Yes</string>
    <string name="rf_regi_step2_radiobutton2">No</string>
    <string name="rf_regi_step2_radiobutton3">Pick up</string>
    <string name="rf_regi_step2_radiobutton4">Delivery</string>
    <string name="rf_regi_step2_radiobutton5">Both</string>
    <string name="rf_regi_step2_textview1">Registration</string>
    <string name="str_rf_open">Opening Days and hours</string>
    <string name="daybefore">Day Before</string>
    <string name="mto_order">Order</string>
    <string name="mto_1before">Day Before</string>
    <string-array name="array_mto">
        <item>Order 0 Day Before</item>
        <item>Order 1 Day Before</item>
        <item>Order 2 Day Before</item>
        <item>Order 3 Day Before</item>
        <item>Order 4 Day Before</item>
        <item>Order 5 Day Before</item>
        <item>Order 6 Day Before</item>
        <item>Order 7 Day Before</item>
    </string-array>
    <string name="str_rf_mon">Mon</string>
    <string name="str_rf_tue">Tue</string>
    <string name="str_rf_wed">Wed</string>
    <string name="str_rf_thu">Thu</string>
    <string name="str_rf_fri">Fri</string>
    <string name="str_rf_sat">Sat</string>
    <string name="str_rf_sun">Sun</string>
    <string name="str_rf_lunch">Lunch</string>
    <string name="str_rf_din">Dinner</string>
    <string name="str_rf_meal">Meal Opening Time</string>
    <string name="str_rf_time">Latest Time until when booking is accepted</string>
    <string name="str_rf_how">How many seats does your restaurant have?</string>
    <string name="str_rf_covers">Covers</string>
    <string name="str_rf_the">The following allows you to configure different
        					  business hours for each day from your admin panel</string>
    <string name="str_rf_no1">15</string>
    <string name="str_rf_what">What is your average bill?(all meals combined)</string>
    <string name="str_rf_no2">100</string>
    <string name="ed_add_comments">About Restaurant</string>
    <string name="str_rf_regi_step3_tv_cuisine">Cuisine</string>
    <string name="str_rf_regi_step3_ed_veg">Enter Vegetarian</string>
    <string name="rf_admin_tv_header_time">12:05 pm</string>
    <string name="rf_admin_tv_table_no">Table No</string>
    <string name="rf_admin_table_number">No TableNo</string>
    <string name="rf_admin_status">Status</string>
    <string name="rf_admin_tv_privacy_needed">Privacy Need</string>
    <string name="rf_admin_add_food_tv_price">Price</string>
    <string name="rf_admin_tv_add_food_italian_food">Italian Food</string>
    <string name="rf_admin_add_food_rf_5412">R5412</string>
    <string name="rf_admin_tv_add_food_spicy">Spicy</string>
    <string name="rf_admin_tv_add_food_level_1">Level 1</string>
    <string name="rf_admin_tv_add_food_prices">Prices</string>
    <string name="ab_date">Date</string>
    <string name="ab_type">Booking Type</string>
    <string name="ab_name">Name</string>
    <string name="ab_noper">Not applicable</string>
    <string name="ab_status">Status</string>
    <string name="mc_pdf">Export to PDF</string>
    <string name="mc_fd_search_hint">Customer name, Date, Comment</string>
    <string name="fb_title">Reviews</string>
    <string name="fb_date">Date</string>
    <string name="fb_customer">Customer</string>
    <string name="fb_cumulative">Cumulative</string>
    <string name="fb_food">Food</string>
    <string name="fb_look">Look</string>
    <string name="fb_clean">Cleanliness</string>
    <string name="fb_atmosphere">Atmosphere</string>
    <string name="fb_comment">Comment</string>
    <string name="fb_Services">Services</string>
    <string name="mc_nodata">No Record found</string>
</resources>