<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/rf_supper_admin_header_background"
        android:gravity="center"
        android:orientation="horizontal" >
       <ImageView
            android:id="@+id/img_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/rf_supper_admin_home_icon"
            android:visibility="visible" />
        <TextView
            android:id="@+id/rf_supper_admin_header_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center"
            android:text="@string/fb_title"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />
        <ImageView
          
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/rf_supper_admin_home_icon"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="90"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp" >

            <AutoCompleteTextView
                android:id="@+id/mc_ed_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner7"
                android:drawableRight="@drawable/search"
                android:gravity="left|center"
                android:hint="@string/mc_fd_search_hint"
                android:paddingLeft="5dp" />

            <Button
                android:id="@+id/btn_mf_pdf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/registration_background"
                android:text="@string/mc_pdf"
                android:textColor="#0c3f74"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="10"
            android:background="#eeeeee"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp" >

            <TextView
                android:id="@+id/txv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/fb_date"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/fb_customer"
                android:textColor="#000000"
                android:textStyle="bold" />

          <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/fb_Services"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:text="@string/fb_food"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:text="@string/fb_look"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:text="@string/fb_clean"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/fb_atmosphere"
                android:textStyle="bold" />
            
               <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="16sp"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:text="@string/fb_cumulative"
                android:textStyle="bold" />
            

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/roundcorner_all_booking"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/fb_comment"
                android:textStyle="bold" />

           
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:background="@drawable/rounded_corner7"
            android:orientation="horizontal" >
		   
            <TextView
                android:id="@+id/txv_invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:text="@string/mc_nodata"
                android:textSize="24sp"
                android:gravity="center" >
            </TextView>
            
            <ListView
                android:id="@+id/lv_manage_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </ListView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>