<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="#eeeeee"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:id="@+id/txv_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/all_booking_rawfile"
            android:gravity="center"
            android:text="@string/ab_date"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txv_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/all_booking_rawfile"
            android:gravity="center"
            android:text="@string/ab_type"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txv_customername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/all_booking_rawfile"
            android:gravity="center"
            android:text="@string/ab_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txv_no_per"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/all_booking_rawfile"
            android:gravity="center"
            android:text="@string/ab_noper"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txv_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/all_booking_rawfile"
            android:gravity="center"
            android:text="@string/ab_status"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="2"
            android:background="@drawable/all_booking_rawfile"
            android:src="@drawable/delete_icon"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/txv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="12"
        android:textSize="5sp"
        android:visibility="invisible" />

</LinearLayout>