<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <!-- Header aligned to top -->

    <LinearLayout
        android:id="@+id/ll_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corner6"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_parentimage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/food_images"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_parent_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/rf_admin_add_food_tv_price"
            android:text="Pizza"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_parent_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/rf_admin_tv_add_food_italian_food"
            android:singleLine="true"
            android:text="Italian food"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_parent_uid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/rf_admin_add_food_rf_5412"
            android:text="RF5412"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_parent_spicy_level"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:hint="@string/rf_admin_tv_add_food_spicy"
            android:text="Spicy"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_parent_spicy_level_req_on"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/rf_admin_tv_add_food_level_1"
            android:text="Level 1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_parent_available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:hint="@string/rf_admin_tv_add_food_prices"
            android:text="Not Available"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_parent_prices"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:hint="@string/rf_admin_tv_add_food_prices"
            android:text="\u20ac 2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/check_box_default"
            android:visibility="gone" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/cross_icon_select"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_number_of_child"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:hint="@string/rf_admin_tv_add_food_prices"
            android:text="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/parent_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:src="@drawable/action_icons" />
    </LinearLayout>

</LinearLayout>